[tool.poetry]
name = "crypto_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
requests = "^2.28.2"
ccxt = "^1.76.25"
telegram = "^1.10.0"
nest-asyncio = "^1.5.6"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"